# GeoSPSR

./: README.md  pyproject.toml
experiments/: example.py  utils.py
geospsr/: gp.py  kernels.py  sdd.py  utils.py
